--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag majidav10/test-repo-1:latest
     - name : push the docker image
-      run : docker login -u majidav10 -p ${{ secrets.DOCKER_TOKEN }} && docker push docker push majidav10/test-repo-1:latest
+      run : docker login -u majidav10 -p ${{ secrets.DOCKER_TOKEN }} && docker push majidav10/test-repo-1:latest
